--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:diff": "cross-env RUST_BACKTRACE=1 tauri dev -f verge-dev",
     "build": "cross-env NODE_OPTIONS='--max-old-space-size=4096' tauri build",
     "tauri": "tauri",
+    "icon": "tauri icon",
     "web:dev": "vite",
     "web:build": "tsc --noEmit && vite build",
     "web:serve": "vite preview",
@@ -83,6 +84,8 @@
     "cross-env": "^7.0.3",
     "https-proxy-agent": "^7.0.5",
     "husky": "^9.1.7",
+    "png2icons": "^2.0.1",
+    "sharp": "^0.33.5",
     "meta-json-schema": "^1.18.10",
     "node-fetch": "^3.3.2",
     "prettier": "^3.3.3",
