--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clash-verge",
+  "name": "clash-goku",
   "version": "2.0.0",
   "license": "GPL-3.0-only",
   "scripts": {
@@ -52,6 +52,7 @@
     "monaco-editor": "^0.52.0",
     "monaco-yaml": "^5.2.3",
     "nanoid": "^5.0.8",
+    "path": "^0.12.7",
     "peggy": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -75,6 +76,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-transition-group": "^4.4.11",
@@ -84,13 +86,13 @@
     "cross-env": "^7.0.3",
     "https-proxy-agent": "^7.0.5",
     "husky": "^9.1.7",
-    "png2icons": "^2.0.1",
-    "sharp": "^0.33.5",
     "meta-json-schema": "^1.18.10",
     "node-fetch": "^3.3.2",
+    "png2icons": "^2.0.1",
     "prettier": "^3.3.3",
     "pretty-quick": "^4.0.0",
     "sass": "^1.81.0",
+    "sharp": "^0.33.5",
     "terser": "^5.36.0",
     "typescript": "^5.6.3",
     "vite": "^5.4.11",
